# docs/api/swagger.yaml
@@ -410,6 +410,8 @@ definitions:
         type: integer
       event:
         type: string
+      extrinsic_index:
+        type: string
       module:
         type: string
       page:
@@ -446,6 +448,13 @@ definitions:
         type: integer
       signed:
         type: string
+    type: object
+  internal_server_http.logsParams:
+    properties:
+      block_num:
+        type: integer
+    required:
+    - block_num
     type: object
   internal_server_http.runtimeMetadataParams:
     properties:
@@ -1851,12 +1860,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Block number
+      - description: params
         in: body
-        name: block_num
+        name: params
         required: true
         schema:
-          type: integer
+          $ref: '#/definitions/internal_server_http.logsParams'
       produces:
       - application/json
       responses:
